--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" | base64 --decode > "$HOME/gcp-sa.json"
+          gcloud auth activate-service-account --key-file="$HOME/gcp-sa.json" --project="${{ secrets.GCP_PROJECT_ID }}"
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
