--- a/apps/simple-nginx/deployment.yaml
+++ b/apps/simple-nginx/deployment.yaml
@@ -19,3 +19,10 @@ spec:
         image: nginx:alpine
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            cpu: 250m
+            memory: 512Mi
+          limits:
+            cpu: 500m
+            memory: 1Gi
