--- a/clusters/digitalocean/kustomization.yaml
+++ b/clusters/digitalocean/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../apps/simple-nginx
+  - ../../apps/ingress-nginx
   # Add more applications here as needed
