--- a/apps/ingress-nginx/kustomization.yaml
+++ b/apps/ingress-nginx/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.13.0/deploy/static/provider/cloud/deploy.yaml
+- namespace.yaml
+- helm-repository.yaml
+- helm-release.yaml
