--- a/clusters/digitalocean/kustomization.yaml
+++ b/clusters/digitalocean/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - ../../apps/simple-nginx
   - ../../apps/ingress-nginx
+  - ../../apps/superfast-api
   # Add more applications here as needed
