--- a/apps/superfast-api/helm-release.yaml
+++ b/apps/superfast-api/helm-release.yaml
@@ -16,8 +16,8 @@ spec:
   values:
     replicaCount: 2
     image:
-      repository: us-central1-docker.pkg.dev/sunlit-guild-373521/superfast/superfast
-      tag: "2025.05.24.01"
+      repository: nginx
+      tag: "latest"
       pullPolicy: IfNotPresent
     service:
       type: ClusterIP
